Added parse_data.ipynb and some changes

--- a/get_data.ipynb
+++ b/get_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,67 +20,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: beautifulsoup4 in /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages (4.12.3)\n",
-      "Requirement already satisfied: soupsieve>1.2 in /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages (from beautifulsoup4) (2.5)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install beautifulsoup4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: playwright in /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages (1.47.0)\n",
-      "Requirement already satisfied: greenlet==3.0.3 in /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages (from playwright) (3.0.3)\n",
-      "Requirement already satisfied: pyee==12.0.0 in /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages (from playwright) (12.0.0)\n",
-      "Requirement already satisfied: typing-extensions in /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages (from pyee==12.0.0->playwright) (4.12.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install playwright\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "os.system('playwright install')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,28 +57,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: playwright in /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages (1.47.0)\n",
-      "Requirement already satisfied: greenlet==3.0.3 in /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages (from playwright) (3.0.3)\n",
-      "Requirement already satisfied: pyee==12.0.0 in /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages (from playwright) (12.0.0)\n",
-      "Requirement already satisfied: typing-extensions in /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages (from pyee==12.0.0->playwright) (4.12.2)\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip install playwright"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,27 +84,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2023, 2024]"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "SEASONS"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,60 +115,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Name: playwright\n",
-      "Version: 1.47.0\n",
-      "Summary: A high-level API to automate web browsers\n",
-      "Home-page: https://github.com/Microsoft/playwright-python\n",
-      "Author: Microsoft Corporation\n",
-      "Author-email: \n",
-      "License: Apache-2.0\n",
-      "Location: /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages\n",
-      "Requires: greenlet, pyee\n",
-      "Required-by: \n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%pip show playwright\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Name: playwright\n",
-      "Version: 1.47.0\n",
-      "Summary: A high-level API to automate web browsers\n",
-      "Home-page: https://github.com/Microsoft/playwright-python\n",
-      "Author: Microsoft Corporation\n",
-      "Author-email: \n",
-      "License: Apache-2.0\n",
-      "Location: /Library/Frameworks/Python.framework/Versions/3.8/lib/python3.8/site-packages\n",
-      "Requires: greenlet, pyee\n",
-      "Required-by: \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip show playwright"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,19 +155,19 @@
     "    else:\n",
     "      break\n",
     "\n",
-    "  return html"
+    "  return html\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "async def scrape_season(season):\n",
     "  url = f'https://www.basketball-reference.com/leagues/NBA_{season}_games.html'\n",
     "  html = await get_html(url, '#content .filter')\n",
-    "  \n",
     "  soup = BeautifulSoup(html)\n",
     "  links = soup.find_all('a')\n",
     "  hrefs = [l[\"href\"] for l in links]\n",
@@ -275,30 +184,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "TimeoutError on {url}\n",
-      "TimeoutError on {url}\n",
-      "2022-23 NBA Schedule | Basketball-Reference.com\n",
-      "2023-24 NBA Schedule | Basketball-Reference.com\n",
-      "2023-24 NBA Schedule | Basketball-Reference.com\n",
-      "2023-24 NBA Schedule | Basketball-Reference.com\n",
-      "TimeoutError on {url}\n",
-      "2023-24 NBA Schedule | Basketball-Reference.com\n",
-      "2023-24 NBA Schedule | Basketball-Reference.com\n",
-      "2023-24 NBA Schedule | Basketball-Reference.com\n",
-      "2023-24 NBA Schedule | Basketball-Reference.com\n",
-      "2023-24 NBA Schedule | Basketball-Reference.com\n",
-      "2023-24 NBA Schedule | Basketball-Reference.com\n",
-      "2023-24 NBA Schedule | Basketball-Reference.com\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for season in SEASONS:\n",
     "  await scrape_season(season)"
@@ -306,11 +194,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "standings_pages = os.listdir(STANDINGS_DIR)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "async def scrape_game(standings_pages):\n",
+    "  with open(standings_pages,'r') as f:\n",
+    "    html = f.read()\n",
+    "    soup = BeautifulSoup(html)\n",
+    "    links = soup.find_all('a')\n",
+    "    hrefs = [l.get('href') for l in links]\n",
+    "    box_scores = [l for l in hrefs if l and \"boxscores\" in l and \".html\" in l]\n",
+    "    box_scores = [f\"https://www.basketball-reference.com{l}\" for l in box_scores]\n",
+    "    for url in box_scores:\n",
+    "      save_path = os.path.join(SCORES_DIR, url.split('/')[-1])\n",
+    "      if os.path.exists(save_path):\n",
+    "        continue\n",
+    "      html = await get_html(url, \"#content\")\n",
+    "      if not html:\n",
+    "        continue\n",
+    "      with open(save_path,'w+') as f:\n",
+    "        f.write(html)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "standing_pages = [s for s in standings_pages if '.html' in s]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for f in standings_pages:\n",
+    "  filepath = os.path.join(STANDINGS_DIR, f)\n",
+    "  await scrape_game(filepath) \n"
    ]
   },
   {
@@ -326,18 +269,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.1"
   }
  },
  "nbformat": 4,
