--- a/parse_data.ipynb
+++ b/parse_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,10 +41,122 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 / 9973\n",
+      "200 / 9973\n",
+      "300 / 9973\n",
+      "400 / 9973\n",
+      "500 / 9973\n",
+      "600 / 9973\n",
+      "700 / 9973\n",
+      "800 / 9973\n",
+      "900 / 9973\n",
+      "1000 / 9973\n",
+      "1100 / 9973\n",
+      "1200 / 9973\n",
+      "1300 / 9973\n",
+      "1400 / 9973\n",
+      "1500 / 9973\n",
+      "1600 / 9973\n",
+      "1700 / 9973\n",
+      "1800 / 9973\n",
+      "1900 / 9973\n",
+      "2000 / 9973\n",
+      "2100 / 9973\n",
+      "2200 / 9973\n",
+      "2300 / 9973\n",
+      "2400 / 9973\n",
+      "2500 / 9973\n",
+      "2600 / 9973\n",
+      "2700 / 9973\n",
+      "2800 / 9973\n",
+      "2900 / 9973\n",
+      "3000 / 9973\n",
+      "3100 / 9973\n",
+      "3200 / 9973\n",
+      "3300 / 9973\n",
+      "3400 / 9973\n",
+      "3500 / 9973\n",
+      "3600 / 9973\n",
+      "3700 / 9973\n",
+      "3800 / 9973\n",
+      "3900 / 9973\n",
+      "4000 / 9973\n",
+      "4100 / 9973\n",
+      "4200 / 9973\n",
+      "4300 / 9973\n",
+      "4400 / 9973\n",
+      "4500 / 9973\n",
+      "4600 / 9973\n",
+      "4700 / 9973\n",
+      "4800 / 9973\n",
+      "4900 / 9973\n",
+      "5000 / 9973\n",
+      "5100 / 9973\n",
+      "5200 / 9973\n",
+      "5300 / 9973\n",
+      "5400 / 9973\n",
+      "5500 / 9973\n",
+      "5600 / 9973\n",
+      "5700 / 9973\n",
+      "5800 / 9973\n",
+      "5900 / 9973\n",
+      "6000 / 9973\n",
+      "6100 / 9973\n",
+      "6200 / 9973\n",
+      "6300 / 9973\n",
+      "6400 / 9973\n",
+      "6500 / 9973\n",
+      "6600 / 9973\n",
+      "6700 / 9973\n",
+      "6800 / 9973\n",
+      "6900 / 9973\n",
+      "7000 / 9973\n",
+      "7100 / 9973\n",
+      "7200 / 9973\n",
+      "7300 / 9973\n",
+      "7400 / 9973\n",
+      "7500 / 9973\n",
+      "7600 / 9973\n",
+      "7700 / 9973\n",
+      "7800 / 9973\n",
+      "7900 / 9973\n",
+      "8000 / 9973\n",
+      "8100 / 9973\n",
+      "8200 / 9973\n",
+      "8300 / 9973\n",
+      "8400 / 9973\n",
+      "8500 / 9973\n",
+      "8600 / 9973\n",
+      "8700 / 9973\n",
+      "8800 / 9973\n",
+      "8900 / 9973\n",
+      "9000 / 9973\n",
+      "9100 / 9973\n",
+      "9200 / 9973\n",
+      "9300 / 9973\n",
+      "9400 / 9973\n",
+      "9500 / 9973\n",
+      "9600 / 9973\n",
+      "9700 / 9973\n",
+      "9800 / 9973\n",
+      "9900 / 9973\n"
+     ]
+    }
+   ],
    "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "\n",
+    "SCORE_DIR = \"data/scores\"\n",
+    "box_scores = os.listdir(SCORE_DIR)\n",
+    "box_scores = [os.path.join(SCORE_DIR, f) for f in box_scores if f.endswith(\".html\")]\n",
     "from bs4 import BeautifulSoup\n",
     "\n",
     "def parse_html(box_score):\n",
@@ -54,128 +166,80 @@
     "    soup = BeautifulSoup(html)\n",
     "    [s.decompose() for s in soup.select(\"tr.over_header\")]\n",
     "    [s.decompose() for s in soup.select(\"tr.thead\")]\n",
-    "    return soup"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "box_score= box_scores[0]\n",
-    "soup = parse_html(box_score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'data/scores/201512090DAL.html'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "box_score"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "    return soup\n",
+    "def read_season_info(soup):\n",
+    "    nav = soup.select(\"#bottom_nav_container\")[0]\n",
+    "    hrefs = [a[\"href\"] for a in nav.find_all('a')]\n",
+    "    season = os.path.basename(hrefs[1]).split(\"_\")[0]\n",
+    "    return season\n",
     "def read_line_score(soup):\n",
-    "  line_score= pd.read_html(str(soup), attrs={\"id\":\"line_score\"})[0]\n",
-    "  "
+    "    line_score = pd.read_html(str(soup), attrs = {'id': 'line_score'})[0]\n",
+    "    cols = list(line_score.columns)\n",
+    "    cols[0] = \"team\"\n",
+    "    cols[-1] = \"total\"\n",
+    "    line_score.columns = cols\n",
+    "    \n",
+    "    line_score = line_score[[\"team\", \"total\"]]\n",
+    "    \n",
+    "    return line_score\n",
+    "def read_stats(soup, team, stat):\n",
+    "    df = pd.read_html(str(soup), attrs = {'id': f'box-{team}-game-{stat}'}, index_col=0)[0]\n",
+    "    df = df.apply(pd.to_numeric, errors=\"coerce\")\n",
+    "    return df\n",
+    "games = []\n",
+    "base_cols = None\n",
+    "for box_score in box_scores:\n",
+    "    soup = parse_html(box_score)\n",
+    "\n",
+    "    line_score = read_line_score(soup)\n",
+    "    teams = list(line_score[\"team\"])\n",
+    "\n",
+    "    summaries = []\n",
+    "    for team in teams:\n",
+    "        basic = read_stats(soup, team, \"basic\")\n",
+    "        advanced = read_stats(soup, team, \"advanced\")\n",
+    "\n",
+    "        totals = pd.concat([basic.iloc[-1,:], advanced.iloc[-1,:]])\n",
+    "        totals.index = totals.index.str.lower()\n",
+    "\n",
+    "        maxes = pd.concat([basic.iloc[:-1].max(), advanced.iloc[:-1].max()])\n",
+    "        maxes.index = maxes.index.str.lower() + \"_max\"\n",
+    "\n",
+    "        summary = pd.concat([totals, maxes])\n",
+    "        \n",
+    "        if base_cols is None:\n",
+    "            base_cols = list(summary.index.drop_duplicates(keep=\"first\"))\n",
+    "            base_cols = [b for b in base_cols if \"bpm\" not in b]\n",
+    "        \n",
+    "        summary = summary[base_cols]\n",
+    "        \n",
+    "        summaries.append(summary)\n",
+    "    summary = pd.concat(summaries, axis=1).T\n",
+    "\n",
+    "    game = pd.concat([summary, line_score], axis=1)\n",
+    "\n",
+    "    game[\"home\"] = [0,1]\n",
+    "\n",
+    "    game_opp = game.iloc[::-1].reset_index()\n",
+    "    game_opp.columns += \"_opp\"\n",
+    "\n",
+    "    full_game = pd.concat([game, game_opp], axis=1)\n",
+    "    full_game[\"season\"] = read_season_info(soup)\n",
+    "    \n",
+    "    full_game[\"date\"] = os.path.basename(box_score)[:8]\n",
+    "    full_game[\"date\"] = pd.to_datetime(full_game[\"date\"], format=\"%Y%m%d\")\n",
+    "    \n",
+    "    full_game[\"won\"] = full_game[\"total\"] > full_game[\"total_opp\"]\n",
+    "    games.append(full_game)\n",
+    "    \n",
+    "    if len(games) % 100 == 0:\n",
+    "        print(f\"{len(games)} / {len(box_scores)}\")\n",
+    "\n",
+    "games_df = pd.concat(games, ignore_index=True)\n",
+    "games_df\n",
+    "\n",
+    "games_df.to_csv(\"nba_games.csv\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>T</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ATL</td>\n",
-       "      <td>22</td>\n",
-       "      <td>27</td>\n",
-       "      <td>27</td>\n",
-       "      <td>22</td>\n",
-       "      <td>98</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>DAL</td>\n",
-       "      <td>23</td>\n",
-       "      <td>21</td>\n",
-       "      <td>28</td>\n",
-       "      <td>23</td>\n",
-       "      <td>95</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Unnamed: 0   1   2   3   4   T\n",
-       "0        ATL  22  27  27  22  98\n",
-       "1        DAL  23  21  28  23  95"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "pd.read_html(str(soup), attrs={\"id\":\"line_score\"})[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -183,18 +247,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.1"
   }
  },
  "nbformat": 4,
